--- a/src/Projects/Modal.css
+++ b/src/Projects/Modal.css
@@ -14,7 +14,7 @@
   max-width: 400px;
   margin: auto;
   position: fixed;
-  top: 10%;
+  top: 8%;
 }
 
 .ProjectFilters {
